--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <link rel='stylesheet' href='/stylesheets/style.css' />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.0/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!-- <script src ="/public/javascripts/index.js" ></script> -->
 
@@ -22,23 +23,25 @@
             <li id="recent">
               <a  class="nav-link" href="/recent">Recent</a>
             </li>
-            <li id ="nearby"class = "nav-item">
+            <li id ="nearby" class = "nav-item">
               <a  class="nav-link" href="/nearby">Nearby</a></li>
             <li id ="mine"class = "nav-item">
-                <a  class="nav-link active" href="/mine" onclick="sendUserName()">Mine</a></li>
+                <a  class="nav-link" id = "mine-link" >Mine</a></li>
 
           </ul>
           <% let username;%>
           <% if (data.length > 0) {%>
-          <% username = data[0].username%>
+            <% username = data[0].username%>
           <% } %>
-        <% if (data.length == 0) {%>
-          <% username = 'User'%>
-        <% } %>
+          <% if (data.length == 0) {%>
+            <% username = 'User'%>
+          <% } %>
 
           <form id = "name-form" action = "/mine" method = "post">
-            <input name="username" id="username" value = <%=username%> >
+            <input name="username" id="username" hidden = true value = <%=username%> > 
+            <input type="submit" value="Submit" hidden = true id = "submit-btn">
           </form>
+
           <span id = "navtext" class = "navbar-text navbar-right">Hello <%=username%> </span>
         </div>
         
@@ -109,11 +112,19 @@
 </html>
 
 <script>
-  document.querySelector('#nearby').addEventListener('click',() => {
-    document.querySelector('#recent').classList.remove('active');
-    document.querySelector('#nearby').classList.add('active');
+  // document.querySelector('#nearby').addEventListener('click',() => {
+  //   document.querySelector('#recent').classList.remove('active');
+  //   document.querySelector('#nearby').classList.add('active');
     
-  })
+  // })
+
+  const mineLink = document.getElementById('mine-link')
+  const submitButton = document.getElementById('submit-btn')
+
+  mineLink.addEventListener('click', function() {
+    submitButton.click();
+  });
+
 
   // function colorswitch() {
   //   document.getElementById("recent").innerHTML = element;
