--- a/views/insurance.ejs
+++ b/views/insurance.ejs
@@ -41,7 +41,7 @@
   </div>
 
   <form id = "name-form" action = "/mine" method = "post">
-     <input name="username" id="username"> 
+     <input name="username" id="username" hidden = true> 
       <input type="submit" value="Submit" hidden = true id = "submit-btn">
    </form>
 
@@ -122,15 +122,14 @@
 
 
 <script>
- const userName = document.getElementById("username_input").value;
- document.getElementById('username').value = "testing";
+ const userName = document.getElementByID("username_input").value;
+ document.getElementById('username').value = userName;
  
  
   const mineLink = document.getElementById('mine-link')
   const submitButton = document.getElementById('submit-btn')
   mineLink.addEventListener('click', function() {
     submitButton.click();
-    console.log(userName);
   });
   
   
