--- a/views/add.ejs
+++ b/views/add.ejs
@@ -59,7 +59,7 @@
     <input type="hidden" name="username" id="sightings_username">
     <input type="hidden" name="location" id="location">
 
-    <p><input type="submit" name="g" value="Submit" id="g"></p>
+    <p><input type="submit" name="g" value="Submit" id="g" onclick="onSubmit(event)"></p>
 </form>
 </body>
 </html>
