--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,6 +11,7 @@
 
 
         <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+        
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
         <script src="/javascripts/index.js" ></script>
     </head>
@@ -30,7 +31,11 @@
                         <div class="form-group">
                             <label for="username_input">Username:</label>
                             <input type="text" class="form-control" id="username_input">
-                            <div id="map-container"><div id="map-user"></div></div>
+
+                        </div>
+
+                        <div class="form-group">
+                            <div id="map-container"><div id="map"></div></div>
                             <input type="hidden" name="user_location" id="user_location">
                         </div>
                     </form>
@@ -70,6 +75,7 @@
                 </span>
         </div>
     </nav>
+
     <p id="demo"></p>
     <% if (data.length==0) {%>
         <p> There Are Currently No Sightings.</p>
@@ -121,4 +127,6 @@
         </table>
     <%}%>
     </body>
+
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBe2fdRMMdIhlmYYFXEup7lXGOV8lzm6qk&callback=initUserMap&v=weekly" defer></script>
 </html>
